[RocksJava] Make cleanup - Clean Target
- Remove JNI includes on clean
- Remove target folder generated by Maven
- Remove shared object
- Remove jar

--- a/java/Makefile
+++ b/java/Makefile
@@ -86,8 +86,13 @@ JAVA_TESTCLASSPATH = $(ROCKSDB_JAR):$(JAVA_JUNIT_JAR):$(JAVA_HAMCR_JAR):$(JAVA_M
 clean:
 	-find . -name "*.class" -exec rm {} \;
 	-find . -name "hs*.log" -exec rm {} \;
+	rm -rf include/*
 	rm -rf javadoc/*
 	rm -rf test-libs/
+	rm -rf target
+	rm librocksdbjni*
+	rm rocksdbjni*
+
 
 javadocs:
 	mkdir -p javadoc; javadoc -d javadoc -sourcepath . -subpackages org -exclude org.rocksdb.test
