[RocksJava] JavaDoc is executed too often
Previous to this commit too much targets got dependencies
on javadocs target.

Introduced one additional target "javalib" which resolves
that situation. JavaDoc will now be generated once while
executing a task with prefix "rocksdbjava".

--- a/java/Makefile
+++ b/java/Makefile
@@ -97,7 +97,9 @@ clean:
 javadocs:
 	mkdir -p javadoc; javadoc -d javadoc -sourcepath . -subpackages org -exclude org.rocksdb.test
 
-java: javadocs resolve_test_deps
+javalib: java javadocs
+
+java: resolve_test_deps
 	javac org/rocksdb/util/*.java org/rocksdb/*.java
 	javac -cp $(JAVA_TESTCLASSPATH) org/rocksdb/test/*.java
 	@cp ../HISTORY.md ./HISTORY-CPP.md
