--- a/examples/Makefile
+++ b/examples/Makefile
@@ -14,7 +14,7 @@ compact_files_example: compact_files_example.cc
 	$(CXX) $(CXXFLAGS) $@.cc -o$@ ../librocksdb.a -I../include -O2 -std=c++11 $(PLATFORM_LDFLAGS) $(PLATFORM_CXXFLAGS) $(EXEC_LDFLAGS)
 
 simple_example-c: simple_example.c
-	$(CXX) -xc -I../include simple_example.c -L.. -lrocksdb -pthread -lsnappy -lbz2 -lz -lrt
+	$(CXX) -xc -I../include simple_example.c -o$@ -L.. -lrocksdb -pthread -lsnappy -lbz2 -lz -lrt
 
 clean:
 	rm -rf ./simple_example ./column_families_example ./compact_files_example ./simple_example-c
